Changed Style of Service Pages

--- a/about/about-firm-foundation.html
+++ b/about/about-firm-foundation.html
@@ -143,11 +143,12 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <h1 class="display-6 text-uppercase mb-4">About Firm Foundation LLC</h1>
                     <p class="mb-4">
-                        Firm Foundation LLC, established in 2024 by Dr. Agyenim Amoako and Patience Agbeviadey, is a leading provider of
-                        comprehensive medical and mental health services in Kent County, Delaware. Our mission is to deliver exceptional,
-                        holistic care in a centralized location, facilitating seamless coordination and continuity of patient care. Our
-                        approach is rooted in personalized care plans designed to meet the unique needs of each patient, fostering overall
-                        well-being and achieving optimal health outcomes.
+                        Firm Foundation Health and Wellness Center, established in 2024 by Dr. Agyenim Amoako and Patience
+                        Agbeviadey, aspires to offer comprehensive medical and mental health services in Kent County,
+                        Delaware. Their mission is to provide exceptional, holistic care in a centralized location, ensuring
+                        seamless coordination and continuity of patient care. The clinic's approach revolves around
+                        personalized care plans designed to cater to the unique needs of each patient, fostering overall
+                        well-being and facilitating optimal health outcomes.
                     </p>
                     <div class="row g-5 mb-4">
                         <div class="col-sm-6">
