--- a/our-services.html
+++ b/our-services.html
@@ -275,9 +275,9 @@
                         <div class="service-inner pb-5">
                             <img class="img-fluid w-100" src="img/services/birth-control.png" alt="">
                             <div class="service-text px-5 pt-4">
-                                <h5 class="text-uppercase">Contraceptive Management</h5>
+                                <h5 class="text-uppercase">Family Planning</h5>
                             </div>
-                            <a class="btn btn-light px-3" href="services/contraceptive-management.html">Read More<i
+                            <a class="btn btn-light px-3" href="services/family-planning.html">Read More<i
                                     class="bi bi-chevron-double-right ms-1"></i></a>
                         </div>
                     </div>
