--- a/services/anxiety-and-depression-management.html
+++ b/services/anxiety-and-depression-management.html
@@ -144,72 +144,87 @@
                     reclaim their lives and find joy again.
                 </p>
             </div>
-            <div class="row g-5 align-items-center">
-                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
-                    <img class="img-fluid" src="../img/services/anxiety-and-depression.png" alt="">
-                </div>
-                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
-                    <h1>Our Approach</h1>
-                    <div class="owl-carousel testimonial-carousel">
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Individual Therapy</h5>
-                            </div>
-                            <p class="fs-5">
-                                Firm Foundations offers mental health counseling to teens, adults, and couples. 
-                                Treatment is focused on helping clients manage symptoms of anxiety and depression, 
-                                particularly those related to life transitions and stress.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Cognitive Behavioral Therapy (CBT)</h5>
-                            </div>
-                            <p class="fs-5">
-                                The agency utilizes evidence-based therapies like CBT and solution-focused practices. 
-                                The emphasis is on finding solutions to current problems and developing new skills 
-                                for future wellness.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Telehealth Services</h5>
-                            </div>
-                            <p class="fs-5">
-                                Firm Foundations provides convenient telehealth services, making it easier for 
-                                clients to access care from various locations.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Specialized Areas</h5>
-                            </div>
-                            <p class="fs-5">
-                                Beyond general anxiety and depression, the counseling services address 
-                                a wide range of issues, including:
-                            </p>
-                            <p><i class="fa fa-check-square text-primary me-3"></i>Relationship and family conflict</p>
-                            <p><i class="fa fa-check-square text-primary me-3"></i>Grief and loss</p>
-                            <p><i class="fa fa-check-square text-primary me-3"></i>Life transitions</p>
-                            <p><i class="fa fa-check-square text-primary me-3"></i>Stress management</p>
-                            <p><i class="fa fa-check-square text-primary me-3"></i>Adjustment issues</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="text-center mx-auto wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
-                <h1>Why It Matters</h1>
-                <p class="fs-5 mb-4">
-                    Anxiety and depression are more than just emotions — they're signals that something 
-                    deeper needs attention. Our goal is to help you feel heard, understood, and empowered to 
-                    move forward with confidence.
-                </p>
-                <a class="btn btn-primary" href="https://form.jotform.com/252531501064546" target="_blank">Schedule Your First Session</a>
-            </div>
         </div>
     </div>
     <!-- Main Service Tile End -->
 
+    <!-- Features Start -->
+    <div class="container-fluid feature bullet-window wow fadeIn" data-wow-delay="0.1s">
+        <div class="container">
+            <div class="row g-0 justify-content-center">
+                <div class="col-lg-12 pt-5 px-3">
+                    <div class="mt-5 text-center">
+                        <h1 class="display-6 text-white text-uppercase mb-4 wow fadeIn" data-wow-delay="0.3s">
+                            Our Approach
+                        </h1>
+                        <div class="row g-4 pt-2 mb-4">
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Individual Therapy</h5>
+                                    <p class="text-white mb-0">
+                                        Firm Foundations offers mental health counseling to teens, adults, and couples.
+                                        Treatment is focused on helping clients manage symptoms of anxiety and depression,
+                                        particularly those related to life transitions and stress.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Cognitive Behavioral Therapy (CBT)</h5>
+                                    <p class="text-white mb-0">
+                                        The agency utilizes evidence-based therapies like CBT and solution-focused
+                                        practices.
+                                        The emphasis is on finding solutions to current problems and developing new skills
+                                        for future wellness.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Telehealth Services</h5>
+                                    <p class="text-white mb-0">
+                                        Firm Foundations provides convenient telehealth services, making it easier for
+                                        clients to access care from various locations.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column border border-5 border-primary p-5">
+                                    <h5>Specialized Areas</h5>
+                                    <p class="text-white mb-0">
+                                        Beyond general anxiety and depression, the counseling services address
+                                        a wide range of issues, including:
+                                    </p>
+                                    <p><i class="fa fa-check-square text-primary me-3"></i>Relationship and family conflict
+                                    </p>
+                                    <p><i class="fa fa-check-square text-primary me-3"></i>Grief and loss</p>
+                                    <p><i class="fa fa-check-square text-primary me-3"></i>Life transitions</p>
+                                    <p><i class="fa fa-check-square text-primary me-3"></i>Stress management</p>
+                                    <p><i class="fa fa-check-square text-primary me-3"></i>Adjustment issues</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Features End -->
+
+    <div class="container-fluid pt-6 pb-6 bg-grey">
+        <div class="container">
+            <div class="text-center mx-auto wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
+                <h1>Why It Matters</h1>
+                <p class="fs-5 mb-4">
+                    Anxiety and depression are more than just emotions - they're signals that something
+                    deeper needs attention. Our goal is to help you feel heard, understood, and empowered to
+                    move forward with confidence.
+                </p>
+                <a class="btn btn-primary" href="https://form.jotform.com/252531501064546" target="_blank">Schedule Your
+                    First Session</a>
+            </div>
+        </div>
+    </div>
 
      <!-- Footer Start -->
     <div class="container-fluid bg-dark footer py-5 wow fadeIn" data-wow-delay="0.1s">
