--- a/services/asthma-management.html
+++ b/services/asthma-management.html
@@ -141,107 +141,6 @@
                     management services. From personalized treatment plans to ongoing support, we are committed to
                     helping you breathe easier and live a healthier life.
                 </p>
-                <p>
-                    Our approach to asthma care is built on three key principles:
-                </p>
-            </div>
-            <div class="row g-5 align-items-center">
-                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
-                    <img class="img-fluid" src="../img/services/asthma-kid-with-mother.jpg" alt="">
-                </div>
-                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="owl-carousel testimonial-carousel">
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Holistic Assessment and Management</h5>
-                            </div>
-                            <p class="fs-5">
-                                We take a holistic view of your health, recognizing that asthma is often influenced by various factors. 
-                                We work with you to identify and address not only the medical aspects of your condition but also 
-                                environmental, lifestyle, and emotional triggers. This includes a thorough assessment of your home 
-                                and workplace to help you minimize exposure to allergens and irritants.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Personalized Asthma Action Plans</h5>
-                            </div>
-                            <p class="fs-5">
-                                There is no one-size-fits-all solution for asthma. Our team will collaborate with you to create a 
-                                personalized asthma action plan. This written plan will be your guide, detailing when and how to 
-                                use your medications, what to do if your symptoms worsen, and when to seek emergency care. We'll 
-                                ensure you have the knowledge and tools to manage your asthma confidently.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Patient Education and Empowerment</h5>
-                            </div>
-                            <p class="fs-5">
-                                We believe that an informed patient is an empowered patient. We are committed to educating you on 
-                                your condition, including proper inhaler technique, understanding your triggers, and implementing 
-                                self-management strategies. We'll provide ongoing support and resources to help you take an active 
-                                role in your own health.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row g-5 align-items-center py-4">
-                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
-                    <h1>Our Asthma Services Include:</h1>
-                    <div class="owl-carousel testimonial-carousel">
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Diagnosis and Monitoring</h5>
-                            </div>
-                            <p class="fs-5">
-                                We use advanced diagnostic tools, such as spirometry and other lung function tests, to accurately 
-                                diagnose and monitor your asthma. We also conduct ongoing check-ups to review your symptoms and 
-                                ensure your treatment plan remains effective.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Medication Management</h5>
-                            </div>
-                            <p class="fs-5">
-                                We provide expert guidance on the full spectrum of asthma medications, including quick-relief inhalers, 
-                                long-term controller medications, and newer therapies like biologics for severe asthma.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Trigger Identification and Avoidance</h5>
-                            </div>
-                            <p class="fs-5">
-                                We help you identify your personal asthma triggers—whether they are allergens like pollen or dust, 
-                                exercise, or stress—and provide practical strategies for avoiding them.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Breathing and Mindfulness Techniques</h5>
-                            </div>
-                            <p class="fs-5">
-                                In line with our holistic philosophy, we offer guidance on breathing exercises and mindfulness 
-                                practices that can help you manage stress and improve your lung function.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Specialized Care</h5>
-                            </div>
-                            <p class="fs-5">
-                                We can provide referrals to specialists like pulmonologists and allergists if needed, 
-                                ensuring you have access to a complete and coordinated healthcare team.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
-                    <img class="img-fluid" src="../img/services/asthma.jpg" alt="">
-                </div>
             </div>
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.5s" style="max-width: 600px;">
                 <p class="fs-5 mb-4">
@@ -253,6 +152,148 @@
     </div>
     <!-- Main Service Tile End -->
 
+    <!-- Features Start -->
+    <div class="container-fluid feature bullet-window wow fadeIn" data-wow-delay="0.1s">
+        <div class="container">
+            <div class="row g-0 justify-content-center">
+                <div class="col-lg-12 pt-5 px-3">
+                    <div class="mt-5 text-center">
+                        <h1 class="display-6 text-white text-uppercase mb-4 wow fadeIn" data-wow-delay="0.3s">
+                            Our Asthma Services Include:
+                        </h1>
+                        <div class="row g-4 pt-2 mb-4">
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Diagnosis and Monitoring</h5>
+                                    <p class="text-white mb-0">
+                                        We use advanced diagnostic tools, such as spirometry and other lung function tests,
+                                        to accurately
+                                        diagnose and monitor your asthma. We also conduct ongoing check-ups to review your
+                                        symptoms and
+                                        ensure your treatment plan remains effective.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Medication Management</h5>
+                                    <p class="text-white mb-0">
+                                        We provide expert guidance on the full spectrum of asthma medications, including
+                                        quick-relief inhalers,
+                                        long-term controller medications, and newer therapies like biologics for severe
+                                        asthma.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Trigger Identification and Avoidance</h5>
+                                    <p class="text-white mb-0">
+                                        We help you identify your personal asthma triggers - whether they are allergens like
+                                        pollen or dust,
+                                        exercise, or stress—and provide practical strategies for avoiding them.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Breathing and Mindfulness Techniques</h5>
+                                    <p class="text-white mb-0">
+                                        In line with our holistic philosophy, we offer guidance on breathing exercises and
+                                        mindfulness
+                                        practices that can help you manage stress and improve your lung function.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Specialized Care</h5>
+                                    <p class="text-white mb-0">
+                                        We can provide referrals to specialists like pulmonologists and allergists if
+                                        needed,
+                                        ensuring you have access to a complete and coordinated healthcare team.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Features End -->
+
+    <div class="container-fluid pt-6 pb-6 bg-grey">
+        <div class="container">
+            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.5s" style="max-width: 600px;">
+                <p class="fs-5 mb-4">
+                    Living with asthma doesn't have to mean living in fear. At Firm Foundation LLC, we equip our 
+                    clients with tools and knowledge to take control of their health—empowering them to breathe easier and thrive.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Features Start -->
+    <div class="container-fluid feature bullet-window wow fadeIn" data-wow-delay="0.1s">
+        <div class="container">
+            <div class="row g-0 justify-content-center">
+                <div class="col-lg-12 pt-5 px-3">
+                    <div class="mt-5 text-center">
+                        <h1 class="display-6 text-white text-uppercase mb-4 wow fadeIn" data-wow-delay="0.3s">
+                            Our Approach
+                        </h1>
+                        <div class="row g-4 pt-2 mb-4">
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Holistic Assessment and Management</h5>
+                                    <p class="text-white mb-0">
+                                        We take a holistic view of your health, recognizing that asthma is often influenced
+                                        by various factors.
+                                        We work with you to identify and address not only the medical aspects of your
+                                        condition but also
+                                        environmental, lifestyle, and emotional triggers. This includes a thorough
+                                        assessment of your home
+                                        and workplace to help you minimize exposure to allergens and irritants.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Personalized Asthma Action Plans</h5>
+                                    <p class="text-white mb-0">
+                                        There is no one-size-fits-all solution for asthma. Our team will collaborate with
+                                        you to create a
+                                        personalized asthma action plan. This written plan will be your guide, detailing
+                                        when and how to
+                                        use your medications, what to do if your symptoms worsen, and when to seek emergency
+                                        care. We'll
+                                        ensure you have the knowledge and tools to manage your asthma confidently.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Patient Education and Empowerment</h5>
+                                    <p class="text-white mb-0">
+                                        We believe that an informed patient is an empowered patient. We are committed to
+                                        educating you on
+                                        your condition, including proper inhaler technique, understanding your triggers, and
+                                        implementing
+                                        self-management strategies. We'll provide ongoing support and resources to help you
+                                        take an active
+                                        role in your own health.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <a class="btn btn-primary mb-3" href="https://form.jotform.com/252531501064546" target="_blank">Book Now</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Features End -->
 
      <!-- Footer Start -->
     <div class="container-fluid bg-dark footer py-5 wow fadeIn" data-wow-delay="0.1s">
