--- a/services/chronic-disease-management.html
+++ b/services/chronic-disease-management.html
@@ -142,88 +142,101 @@
                     as a key component of its care model. This service is designed to support individuals living with long-term
                     health conditions such as diabetes, asthma, hypertension, and arthritis.
                     The goal of chronic disease management at Firm Foundation LLC is to help clients effectively control
-                    their condition, reduce symptoms, prevent complications, and improve their overall quality of life. 
+                    their condition, reduce symptoms, prevent complications and improve their overall quality of life. 
                 </p>
-                <p>
-                    <b>This is
-                    achieved through a personalized and holistic approach that includes:</b>
-                </p>
-            </div>
-            <div class="row g-5 align-items-center">
-                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
-                    <img class="img-fluid" src="../img/services/chronic-disease-mgt.png" alt="">
-                </div>
-                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="owl-carousel testimonial-carousel">
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Personalized Care Plans</h5>
-                            </div>
-                            <p class="fs-5">
-                                A detailed assessment of each client's health, lifestyle and unique 
-                                needs is conducted to create a comprehensive care plan.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Regular Monitoring and Follow-Up</h5>
-                            </div>
-                            <p class="fs-5">
-                                Ongoing check-ins and adjustments to care plans ensure that clients stay on track
-                                with their health goals and receive timely support.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Education and Empowerment</h5>
-                            </div>
-                            <p class="fs-5">
-                                Clients are provided with the knowledge and resources they need to understand their 
-                                condition, make informed health choices, and manage their health independently.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Lifestyle and Dietary Support</h5>
-                            </div>
-                            <p class="fs-5">
-                                The program includes practical advice and support for incorporating healthy lifestyle 
-                                changes, such as diet and exercise.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Medication Management</h5>
-                            </div>
-                            <p class="fs-5">
-                                The care team ensures clients are on the most effective medication regimen and provides 
-                                information about dosage, side effects, and potential interactions.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Care Coordination</h5>
-                            </div>
-                            <p class="fs-5">
-                                As part of its integrated model, Firm Foundation LLC coordinates care across different providers 
-                                and specialists to ensure seamless, continuous, and patient-centered support.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="text-center mx-auto wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
-                <h1>Why It Matters</h1>
-                <p class="fs-5 mb-4">
-                    Chronic conditions don't define you — they're just one part of your story. At Firm Foundation LLC, 
-                    we're here to walk alongside you, offering tools and encouragement to help you live fully and thrive.
-                </p>
-                <a class="btn btn-primary" href="https://form.jotform.com/252531501064546" target="_blank">Schedule Your First Session</a>
             </div>
         </div>
     </div>
     <!-- Main Service Tile End -->
 
+    <!-- Features Start -->
+    <div class="container-fluid feature bullet-window wow fadeIn" data-wow-delay="0.1s">
+        <div class="container">
+            <div class="row g-0 justify-content-center">
+                <div class="col-lg-12 pt-5 px-3">
+                    <div class="mt-5 text-center">
+                        <h1 class="display-6 text-white text-uppercase mb-4 wow fadeIn" data-wow-delay="0.3s">
+                            Our Approach Includes
+                        </h1>
+                        <div class="row g-4 pt-2 mb-4">
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Personalized Care Plans</h5>
+                                    <p class="text-white mb-0">
+                                        A detailed assessment of each client's health, lifestyle and unique
+                                        needs is conducted to create a comprehensive care plan.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Regular Monitoring and Follow-Up</h5>
+                                    <p class="text-white mb-0">
+                                        Ongoing check-ins and adjustments to care plans ensure that clients stay on track
+                                        with their health goals and receive timely support.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Education and Empowerment</h5>
+                                    <p class="text-white mb-0">
+                                        Clients are provided with the knowledge and resources they need to understand their
+                                        condition, make informed health choices, and manage their health independently.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Lifestyle and Dietary Support</h5>
+                                    <p class="text-white mb-0">
+                                        The program includes practical advice and support for incorporating healthy
+                                        lifestyle
+                                        changes, such as diet and exercise.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Medication Management</h5>
+                                    <p class="text-white mb-0">
+                                        The care team ensures clients are on the most effective medication regimen and
+                                        provides
+                                        information about dosage, side effects, and potential interactions.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Care Coordination</h5>
+                                    <p class="text-white mb-0">
+                                        As part of its integrated model, Firm Foundation LLC coordinates care across
+                                        different providers
+                                        and specialists to ensure seamless, continuous, and patient-centered support.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Features End -->
+
+    <div class="container-fluid pt-6 pb-6 bg-grey">
+        <div class="container">
+            <div class="text-center mx-auto wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
+                <h1>Why It Matters</h1>
+                <p class="fs-5 mb-4">
+                    Chronic conditions don't define you — they're just one part of your story. At Firm Foundation LLC,
+                    we're here to walk alongside you, offering tools and encouragement to help you live fully and thrive.
+                </p>
+                <a class="btn btn-primary" href="https://form.jotform.com/252531501064546" target="_blank">Schedule Your
+                    First Session</a>
+            </div>
+        </div>
+    </div>
 
      <!-- Footer Start -->
     <div class="container-fluid bg-dark footer py-5 wow fadeIn" data-wow-delay="0.1s">
