--- a/services/dot-exams.html
+++ b/services/dot-exams.html
@@ -144,59 +144,74 @@
 
                 </p>
             </div>
-            <div class="row g-5 align-items-center">
-                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
-                    <img class="img-fluid" src="../img/services/dot.png" alt="">
-                </div>
-                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
-                    <h1>What's Included in a DOT Exam</h1>
-                    <p class="fs-5">
-                        Our DOT physicals assess key health indicators to determine fitness for duty:
-                    </p>
-                    <div class="owl-carousel testimonial-carousel">
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Vision & Hearing Tests</h5>
+        </div>
+    </div>
+    <!-- Main Service Tile End -->
+
+    <!-- Features Start -->
+    <div class="container-fluid feature bullet-window wow fadeIn" data-wow-delay="0.1s">
+        <div class="container">
+            <div class="row g-0 justify-content-center">
+                <div class="col-lg-12 pt-5 px-3">
+                    <div class="mt-5 text-center">
+                        <h1 class="display-6 text-white text-uppercase mb-4 wow fadeIn" data-wow-delay="0.3s">
+                            What's Included in a DOT Exam
+                        </h1>
+                        <p class="fs-5">
+                            Our DOT physicals assess key health indicators to determine fitness for duty:
+                        </p>
+                        <div class="row g-4 pt-2 mb-4">
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Vision & Hearing Tests</h5>
+                                    <p class="text-white mb-0">
+                                        Ensuring drivers meet minimum standards for safe operation.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Ensuring drivers meet minimum standards for safe operation.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Blood Pressure & Pulse Rate</h5>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Blood Pressure & Pulse Rate</h5>
+                                    <p class="text-white mb-0">
+                                        Monitoring cardiovascular health and identifying potential risks.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Monitoring cardiovascular health and identifying potential risks.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Urinalysis</h5>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Urinalysis</h5>
+                                    <p class="text-white mb-0">
+                                        Screening for underlying medical conditions such as diabetes.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Screening for underlying medical conditions such as diabetes.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Medical History Review</h5>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Medical History Review</h5>
+                                    <p class="text-white mb-0">
+                                        Evaluating past and current health issues that may affect driving.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Evaluating past and current health issues that may affect driving.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Physical Examination</h5>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Physical Examination</h5>
+                                    <p class="text-white mb-0">
+                                        Full-body check to assess strength, flexibility, and overall wellness.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Full-body check to assess strength, flexibility, and overall wellness.
-                            </p>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <!-- Features End -->
+
+    <!-- Main Service Tile Start -->
+    <div class="container-fluid pt-6 pb-6 bg-grey">
+        <div class="container">
             <div class="text-center mx-auto wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
                 <h1>What You'll Receive</h1>
                 <p><i class="fa fa-check-square text-primary me-3"></i>
