--- a/services/erectile-dysfunction-management.html
+++ b/services/erectile-dysfunction-management.html
@@ -196,49 +196,6 @@
     <!-- Main Service Tile Start -->
     <div class="container-fluid pt-6 pb-6 bg-grey">
         <div class="container">
-            <div class="row g-5 align-items-center">
-                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
-                    <img class="img-fluid" src="../img/services/erectile-dysfunction.png" alt="">
-                </div>
-                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
-                    <h1>Our Approach</h1>
-                    <p>We provide a safe, judgment-free space where clients can explore effective solutions:</p>
-                    <div class="owl-carousel testimonial-carousel">
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Comprehensive Evaluation</h5>
-                            </div>
-                            <p class="fs-5">
-                                Medical history, physical exam, and lab testing to identify root causes.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Personalized Treatment Plans</h5>
-                            </div>
-                            <p class="fs-5">
-                                Options may include medication, lifestyle changes, hormone therapy, or referrals for advanced care.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Counseling & Support</h5>
-                            </div>
-                            <p class="fs-5">
-                                Addressing emotional and relational aspects of ED through individual or couples therapy.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Education & Prevention</h5>
-                            </div>
-                            <p class="fs-5">
-                                Guidance on maintaining sexual health and preventing future complications.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
             <div class="text-center mx-auto wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
                 <h1>Why It Matters</h1>
                 <p class="fs-5 mb-4">
@@ -246,11 +203,64 @@
                     to helping you restore confidence, improve intimacy, and live a fuller life—with discretion, 
                     dignity and respect.
                 </p>
-                <a class="btn btn-primary" href="https://form.jotform.com/252531501064546" target="_blank">Schedule Your First Session</a>
+                
             </div>
         </div>
     </div>
     <!-- Main Service Tile End -->
+
+    <!-- Features Start -->
+    <div class="container-fluid feature bullet-window wow fadeIn" data-wow-delay="0.1s">
+        <div class="container">
+            <div class="row g-0 justify-content-center">
+                <div class="col-lg-12 pt-5 px-3">
+                    <div class="mt-5 text-center">
+                        <h1 class="display-6 text-white text-uppercase mb-4 wow fadeIn" data-wow-delay="0.3s">
+                            Our Approach
+                        </h1>
+                        <p>We provide a safe, judgment-free space where clients can explore effective solutions:</p>
+                        <div class="row g-4 pt-2 mb-4">
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Comprehensive Evaluation</h5>
+                                    <p class="text-white mb-0">
+                                        Medical history, physical exam, and lab testing to identify root causes.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Personalized Treatment Plans</h5>
+                                    <p class="text-white mb-0">
+                                        Options may include medication, lifestyle changes, hormone therapy, or referrals for
+                                        advanced care. </p>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Counseling & Support</h5>
+                                    <p class="text-white mb-0">
+                                        Addressing emotional and relational aspects of ED through individual or couples
+                                        therapy.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Education & Prevention</h5>
+                                    <p class="text-white mb-0">
+                                        Guidance on maintaining sexual health and preventing future complications.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <a class="btn btn-primary mb-4" href="https://form.jotform.com/252531501064546" target="_blank">Schedule Your First Session</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Features End -->
 
 
      <!-- Footer Start -->
