--- a/services/family-planning.html
+++ b/services/family-planning.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Hair Loss Management - Firm Foundation LLC</title>
+    <title>Family Planning - Firm Foundation LLC</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -116,12 +116,12 @@
             <div class="row justify-content-center">
                 <div class="col-lg-7">
                     <div class="bg-white p-5">
-                        <h1 class="display-6 text-uppercase mb-3 animated slideInDown">Hair Loss Management Service</h1>
+                        <h1 class="display-6 text-uppercase mb-3 animated slideInDown">Family Planning / Contraceptive Management Service</h1>
                         <nav aria-label="breadcrumb animated slideInDown">
                             <ol class="breadcrumb justify-content-center mb-0">
                                 <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
                                 <li class="breadcrumb-item"><a href="../our-services.html">Services</a></li>
-                                <li class="breadcrumb-item" aria-current="page">Hair Loss Management</li>
+                                <li class="breadcrumb-item" aria-current="page">Family Planning</li>
                             </ol>
                         </nav>
                     </div>
@@ -131,93 +131,98 @@
     </div>
     <!-- Page Header End -->
 
-
     <!-- Main Service Tile Start -->
     <div class="container-fluid pt-6 pb-6 bg-grey">
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                <h1 class="display-6 text-uppercase mb-5">Restore Confidence. Reclaim Your Look.</h1>
+                <h1 class="display-6 text-uppercase mb-5">Your Body. Your Choice. Your Future.</h1>
                 <p>
-                    At Firm Foundation LLC, we understand that hair loss can affect more than just appearance - 
-                    it can impact self-esteem, emotional well-being, and quality of life. That's why we offer 
-                    compassionate, science-backed solutions to help you take control of your hair health.
+                    At Firm Foundation LLC, we provide compassionate, confidential and comprehensive Contraceptive Management 
+                    services to support individuals and families in making informed reproductive health decisions. 
+                    Whether you're exploring options for the first time or seeking ongoing care, our team is here 
+                    to guide you every step of the way.
                 </p>
-            </div>
-            <div class="text-center mx-auto py-5 wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
-                <h1>What Causes Hair Loss?</h1>
-                <p class="fs-5 mb-4">
-                    Hair loss can result from a variety of factors, including:
-                </p>
-                <p><i class="fa fa-check-square text-primary me-3"></i><b>Genetics (e.g. male or female pattern baldness).</b></p>
-                <p><i class="fa fa-check-square text-primary me-3"></i><b>Hormonal changes or imbalances.</b></p>
-                <p><i class="fa fa-check-square text-primary me-3"></i><b>Stress, illness, or nutritional deficiencies.</b></p>
-                <p><i class="fa fa-check-square text-primary me-3"></i><b>Scalp conditions or autoimmune disorders.</b></p>
-                <p><i class="fa fa-check-square text-primary me-3"></i><b>Medication side effects or lifestyle habits.</b></p>
-            </div>
-            <div class="row g-5 align-items-center">
-                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
-                    <img class="img-fluid" src="../img/services/hair-loss.jpg" alt="">
-                </div>
-                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
-                    <h1>Our Services Include</h1>
-                    <div class="owl-carousel testimonial-carousel">
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Comprehensive Scalp & Hair Assessment</h5>
-                            </div>
-                            <p class="fs-5">
-                                In-depth evaluation to identify the root cause of hair loss.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Medical & Non-Medical Treatments</h5>
-                            </div>
-                            <p class="fs-5">
-                                Options may include topical solutions, oral medications, 
-                                Platelet-Rich Plasma(PRP) therapy, microneedling, or referrals for advanced care.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Lifestyle & Nutritional Counseling</h5>
-                            </div>
-                            <p class="fs-5">
-                                Guidance on diet, stress management, and habits that support healthy hair growth.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Supportive Counseling</h5>
-                            </div>
-                            <p class="fs-5">
-                                Emotional support to help clients navigate the psychological impact of hair loss.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Youth & Adult Services</h5>
-                            </div>
-                            <p class="fs-5">
-                                Age-appropriate care for teens, adults, and seniors experiencing hair thinning or baldness.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="text-center mx-auto wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
-                <h1>Why It Matters</h1>
-                <p class="fs-5 mb-4">
-                    We believe that everyone deserves to feel confident in their own skin - and hair. 
-                    Our team is here to walk with you through every step of your hair restoration journey, 
-                    offering expert care in a respectful, judgment-free environment
-                </p>
-                <a class="btn btn-primary" href="#">Schedule Your First Session</a>
             </div>
         </div>
     </div>
     <!-- Main Service Tile End -->
 
+    <!-- Features Start -->
+    <div class="container-fluid feature bullet-window wow fadeIn" data-wow-delay="0.1s">
+        <div class="container">
+            <div class="row g-0 justify-content-center">
+                <div class="col-lg-12 pt-5 px-3">
+                    <div class="mt-5 text-center">
+                        <h1 class="display-6 text-white text-uppercase mb-4 wow fadeIn" data-wow-delay="0.3s">
+                            Our Services Include:
+                        </h1>
+                        <div class="row g-4 pt-2 mb-4">
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Contraceptive Counseling</h5>
+                                    <p class="text-white mb-0">
+                                        Personalized guidance to help you choose the method that best fits your 
+                                lifestyle, health needs, and future plans.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Short & Long Term Options</h5>
+                                    <p class="text-white mb-0">
+                                        Access to a wide range of contraceptive methods including pills, 
+                                patches, injectables, implants, IUDs and emergency contraception.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Fertility Education & Planning</h5>
+                                    <p class="text-white mb-0">
+                                        Support for individuals and couples looking to understand their 
+                                reproductive health and plan for future pregnancies.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Telehealth Consultations</h5>
+                                    <p class="text-white mb-0">
+                                        Convenient virtual appointments for birth control counseling and prescription refills.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Youth & Young Adult Services</h5>
+                                    <p class="text-white mb-0">
+                                        Age-appropriate education and support for teens and young adults navigating reproductive choices.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Features End -->
+
+    <!-- Main Service Tile Start -->
+    <div class="container-fluid pt-6 pb-6 bg-grey">
+        <div class="container">
+            <div class="text-center mx-auto wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
+                <h1>Why It Matters</h1>
+                <p class="fs-5 mb-4">
+                    Birth control is more than prevention - it's empowerment. We believe everyone deserves access to safe, 
+                    reliable, and respectful reproductive health care. Our goal is to help you take control of your health 
+                    and your future with confidence.
+                </p>
+                <a class="btn btn-primary" href="https://form.jotform.com/252531501064546" target="_blank">Schedule Your First Session</a>
+            </div>
+        </div>
+    </div>
+    <!-- Main Service Tile End -->
 
      <!-- Footer Start -->
     <div class="container-fluid bg-dark footer py-5 wow fadeIn" data-wow-delay="0.1s">
