--- a/services/immigration-medical-exams.html
+++ b/services/immigration-medical-exams.html
@@ -144,52 +144,67 @@
                     requirements with confidence
                 </p>
             </div>
-            <div class="row g-5 align-items-center">
-                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
-                    <img class="img-fluid" src="../img/services/imigra.jpg" alt="">
-                </div>
-                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
-                    <h1>What's Included in Your Exam</h1>
-                    <p class="fs-5 mb-4">
-                        Our immigration physicals follow the guidelines set by the U.S. Citizenship 
-                        and Immigration Services (USCIS) and include:
-                    </p>
-                    <div class="owl-carousel testimonial-carousel">
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Medical History Review</h5>
+        </div>
+    </div>
+    <!-- Main Service Tile End -->
+
+    <!-- Features Start -->
+    <div class="container-fluid feature bullet-window wow fadeIn" data-wow-delay="0.1s">
+        <div class="container">
+            <div class="row g-0 justify-content-center">
+                <div class="col-lg-12 pt-5 px-3">
+                    <div class="mt-5 text-center">
+                        <h1 class="display-6 text-white text-uppercase mb-4 wow fadeIn" data-wow-delay="0.3s">
+                            What's Included in Your Exam
+                        </h1>
+                        <p class="fs-5">
+                            Our immigration physicals follow the guidelines set by the U.S. Citizenship
+                            and Immigration Services (USCIS) and include:
+                        </p>
+                        <div class="row g-4 pt-2 mb-4">
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Medical History Review</h5>
+                                    <p class="text-white mb-0">
+                                        Assessment of past and current health conditions.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Assessment of past and current health conditions.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Physical Examination</h5>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Physical Examination</h5>
+                                    <p class="text-white mb-0">
+                                        Comprehensive check of vital signs, physical health and mental wellness.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Comprehensive check of vital signs, physical health and mental wellness.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Required Laboratory Tests</h5>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Required Laboratory Tests</h5>
+                                    <p class="text-white mb-0">
+                                        Screenings for communicable diseases such as tuberculosis, syphilis and gonorrhea.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Screenings for communicable diseases such as tuberculosis, syphilis and gonorrhea.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Vaccination Review & Administration</h5>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Vaccination Review & Administration</h5>
+                                    <p class="text-white mb-0">
+                                        Verification of immunization records and administration of any required vaccines.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Verification of immunization records and administration of any required vaccines.
-                            </p>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <!-- Features End -->
+
+    <!-- Main Service Tile Start -->
+    <div class="container-fluid pt-6 pb-6 bg-grey">
+        <div class="container">
             <div class="text-start mx-auto py-5 wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
                 <h1 class="text-center">What to Bring?</h1>
                 <p class="fs-5 mb-4 text-center">
