--- a/services/mental-health-and-counseling.html
+++ b/services/mental-health-and-counseling.html
@@ -144,77 +144,97 @@
                     seeking personal growth.
                 </p>
             </div>
-            <div class="row g-5 align-items-center">
-                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
-                    <img class="img-fluid" src="../img/services/mental-health.jpg" alt="">
-                </div>
-                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
-                    <h1>What We Offer</h1>
-                    <p class="fs-5 mb-4">
-                        Our licensed professionals provide a safe, non-judgmental space for healing and transformation through:
-                    </p>
-                    <div class="owl-carousel testimonial-carousel">
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Mental Health Treatment and Counseling</h5>
+        </div>
+    </div>
+    <!-- Main Service Tile End -->
+
+    <!-- Features Start -->
+    <div class="container-fluid feature bullet-window wow fadeIn" data-wow-delay="0.1s">
+        <div class="container">
+            <div class="row g-0 justify-content-center">
+                <div class="col-lg-12 pt-5 px-3">
+                    <div class="mt-5 text-center">
+                        <h1 class="display-6 text-white text-uppercase mb-4 wow fadeIn" data-wow-delay="0.3s">
+                            What We Offer
+                        </h1>
+                        <p class="fs-5">
+                            Our licensed professionals provide a safe, non-judgmental space for healing and transformation
+                            through:
+                        </p>
+                        <div class="row g-4 pt-2 mb-4">
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Mental Health Treatment and Counseling</h5>
+                                    <p class="text-white mb-0">
+                                        Comprehensive individual assessments, psychiatric evaluations and diagnoses.
+                                        Medication
+                                        management is also provided for depression, anxiety, ADHD and other mental health
+                                        concerns.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Comprehensive individual assessments, psychiatric evaluations and diagnoses. Medication 
-                                management is also provided for depression, anxiety,  ADHD and other mental health concerns.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Substance Use Services</h5>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Substance Use Services</h5>
+                                    <p class="text-white mb-0">
+                                        Comprehensive assessment, counseling and opioid treatment (using MAT (medicated
+                                        assisted treatment)
+                                        with Vivitrol, Sublocade, Suboxone and Naltrexone as indicated).
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Comprehensive assessment, counseling and opioid treatment (using MAT (medicated assisted treatment) 
-                                with Vivitrol, Sublocade, Suboxone, and Naltrexoneas indicated).
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Individual Therapy</h5>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Individual Therapy</h5>
+                                    <p class="text-white mb-0">
+                                        Personalized sessions to explore emotions, build coping skills and foster
+                                        resilience.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Personalized sessions to explore emotions, build coping skills and foster resilience.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Couples & Family Counseling</h5>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Couples & Family Counseling</h5>
+                                    <p class="text-white mb-0">
+                                        Strengthening communication, resolving conflict and nurturing healthy relationships.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Strengthening communication, resolving conflict and nurturing healthy relationships.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Teen & Youth Support</h5>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Teen & Youth Support</h5>
+                                    <p class="text-white mb-0">
+                                        Guidance through academic stress, identity development and emotional regulation.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Guidance through academic stress, identity development and emotional regulation.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Anxiety & Depression Treatment</h5>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Anxiety & Depression Treatment</h5>
+                                    <p class="text-white mb-0">
+                                        Evidence-based approaches to manage symptoms and restore balance.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Evidence-based approaches to manage symptoms and restore balance.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Life Transitions & Adjustment Counseling</h5>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Life Transitions & Adjustment Counseling</h5>
+                                    <p class="text-white mb-0">
+                                        Support during major changes such as relocation, loss or career shifts.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Support during major changes such as relocation, loss or career shifts.
-                            </p>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <!-- Features End -->
+
+    <!-- Main Service Tile Start -->
+    <div class="container-fluid pt-6 pb-6 bg-grey">
+        <div class="container">
             <div class="text-center mx-auto wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
                 <h1>Our Approach</h1>
                 <p class="fs-5 mb-4">
