--- a/services/minor-procedures.html
+++ b/services/minor-procedures.html
@@ -144,57 +144,71 @@
                     to provide efficient treatment with compassion and precision.
                 </p>
             </div>
-            <div class="row g-5 align-items-center">
-                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
-                    <img class="img-fluid" src="../img/services/minor-procedure.png" alt="">
-                </div>
-                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
-                    <h1>Common Procedures We Perform</h1>
-                    <div class="owl-carousel testimonial-carousel">
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Wound Care & Suturing</h5>
+        </div>
+    </div>
+    <!-- Main Service Tile End -->
+
+    <!-- Features Start -->
+    <div class="container-fluid feature bullet-window wow fadeIn" data-wow-delay="0.1s">
+        <div class="container">
+            <div class="row g-0 justify-content-center">
+                <div class="col-lg-12 pt-5 px-3">
+                    <div class="mt-5 text-center">
+                        <h1 class="display-6 text-white text-uppercase mb-4 wow fadeIn" data-wow-delay="0.3s">
+                            Procedures We Perform
+                        </h1>
+                        <div class="row g-4 pt-2 mb-4">
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Wound Care & Suturing</h5>
+                                    <p class="text-white mb-0">
+                                        Treatment for minor cuts, abrasions, and lacerations - including cleaning,
+                                        stitching and follow-up care.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Treatment for minor cuts, abrasions, and lacerations - including cleaning, 
-                                stitching and follow-up care.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Skin Tag & Mole Removal</h5>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Skin Tag & Mole Removal</h5>
+                                    <p class="text-white mb-0">
+                                        Safe excision of benign skin growths for comfort or cosmetic reasons.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Safe excision of benign skin growths for comfort or cosmetic reasons.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Abscess Drainage</h5>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Abscess Drainage</h5>
+                                    <p class="text-white mb-0">
+                                        Prompt relief from painful skin infections through sterile drainage and aftercare.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Prompt relief from painful skin infections through sterile drainage and aftercare.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Ear Lavage (Ear Wax Removal)</h5>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Ear Lavage (Ear Wax Removal)</h5>
+                                    <p class="text-white mb-0">
+                                        Gentle cleaning to restore hearing and relieve discomfort caused by impacted wax.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Gentle cleaning to restore hearing and relieve discomfort caused by impacted wax.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Foreign Body Removal</h5>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Foreign Body Removal</h5>
+                                    <p class="text-white mb-0">
+                                        Safe extraction of splinters, glass, or other embedded materials from skin or soft tissue.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Safe extraction of splinters, glass, or other embedded materials from skin or soft tissue.
-                            </p>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <!-- Features End -->
+
+    <div class="container-fluid pt-6 pb-6 bg-grey">
+        <div class="container">
             <div class="text-center mx-auto wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
                 <h1>Why Choose Us</h1>
                 <div class="text-start pb-5">
@@ -210,7 +224,6 @@
             </div>
         </div>
     </div>
-    <!-- Main Service Tile End -->
 
 
      <!-- Footer Start -->
