--- a/services/obesity-management.html
+++ b/services/obesity-management.html
@@ -143,61 +143,78 @@
                     is rooted in respect, evidence-based care and a deep commitment to helping each client thrive.
                 </p>
             </div>
-            <div class="row g-5 align-items-center">
-                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
-                    <img class="img-fluid" src="../img/services/obesity-management.jpg" alt="">
-                </div>
-                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
-                    <h1>What We Offer</h1>
-                    <div class="owl-carousel testimonial-carousel">
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Comprehensive Health Assessments</h5>
+        </div>
+    </div>
+    <!-- Main Service Tile End -->
+
+    <!-- Features Start -->
+    <div class="container-fluid feature bullet-window wow fadeIn" data-wow-delay="0.1s">
+        <div class="container">
+            <div class="row g-0 justify-content-center">
+                <div class="col-lg-12 pt-5 px-3">
+                    <div class="mt-5 text-center">
+                        <h1 class="display-6 text-white text-uppercase mb-4 wow fadeIn" data-wow-delay="0.3s">
+                            What We Offer
+                        </h1>
+                        <div class="row g-4 pt-2 mb-4">
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Comprehensive Health Assessments</h5>
+                                    <p class="text-white mb-0">
+                                        We begin with a full evaluation of your physical health, lifestyle
+                                        and goals to tailor a plan that works for you.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                We begin with a full evaluation of your physical health, lifestyle 
-                                and goals to tailor a plan that works for you.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Medical Interventions</h5>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Medical Interventions</h5>
+                                    <p class="text-white mb-0">
+                                        When appropriate, we offer FDA-approved medications and monitor progress
+                                        closely to ensure safety and effectiveness.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                When appropriate, we offer FDA-approved medications and monitor progress 
-                                closely to ensure safety and effectiveness
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Behavioral & Emotional Support</h5>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Behavioral & Emotional Support</h5>
+                                    <p class="text-white mb-0">
+                                        We recognize the emotional challenges that can accompany weight management
+                                        and offer compassionate support through counseling and referrals.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                We recognize the emotional challenges that can accompany weight management 
-                                and offer compassionate support through counseling and referrals.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Nutrition & Lifestyle Counseling</h5>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Nutrition & Lifestyle Counseling</h5>
+                                    <p class="text-white mb-0">
+                                        Our team provides practical, culturally sensitive guidance to support healthy
+                                        eating habits and sustainable behavior change.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Our team provides practical, culturally sensitive guidance to support healthy 
-                                eating habits and sustainable behavior change.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Chronic Disease Prevention & Management</h5>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Chronic Disease Prevention & Management</h5>
+                                    <p class="text-white mb-0">
+                                        Our program helps reduce the risk of diabetes, hypertension and other
+                                        obesity-related
+                                        conditions through proactive care.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Our program helps reduce the risk of diabetes, hypertension and other obesity-related 
-                                conditions through proactive care.
-                            </p>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <!-- Features End -->
+
+
+    <!-- Main Service Tile Start -->
+    <div class="container-fluid pt-6 pb-6 bg-grey">
+        <div class="container">
             <div class="text-center mx-auto wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
                 <h1>Why Choose Us</h1>
                 <div class="text-start pb-5">
