--- a/services/smoking-cessation-management.html
+++ b/services/smoking-cessation-management.html
@@ -143,55 +143,79 @@
                     compassionate, evidence-based support to help you break free from tobacco and reclaim your health.
                 </p>
             </div>
-            <div class="row g-5 align-items-center">
-                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
-                    <img class="img-fluid" src="../img/services/smoking-cessation.jpg" alt="">
-                </div>
-                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
-                    <h1>What We Offer</h1>
-                    <div class="owl-carousel testimonial-carousel">
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Personalized Quit Plans</h5>
+        </div>
+    </div>
+    <!-- Main Service Tile End -->
+
+    <!-- Features Start -->
+    <div class="container-fluid feature bullet-window wow fadeIn" data-wow-delay="0.1s">
+        <div class="container">
+            <div class="row g-0 justify-content-center">
+                <div class="col-lg-12 pt-5 px-3">
+                    <div class="mt-5 text-center">
+                        <h1 class="display-6 text-white text-uppercase mb-4 wow fadeIn" data-wow-delay="0.3s">
+                            What We Offer
+                        </h1>
+                        <div class="row g-4 pt-2 mb-4">
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Personalized Quit Plans</h5>
+                                    <p class="text-white mb-0">
+                                        Tailored strategies based on your lifestyle, goals and health history.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Tailored strategies based on your lifestyle, goals and health history.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Behavioral Counseling</h5>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Behavioral Counseling</h5>
+                                    <p class="text-white mb-0">
+                                        One-on-one or group sessions to build coping skills and motivation.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                One-on-one or group sessions to build coping skills and motivation.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Medication Support</h5>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Medication Support</h5>
+                                    <p class="text-white mb-0">
+                                        Access to nicotine replacement therapy (NRT) and prescription options when appropriate.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Access to nicotine replacement therapy (NRT) and prescription options when appropriate.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Progress Tracking & Encouragement</h5>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Progress Tracking & Encouragement</h5>
+                                    <p class="text-white mb-0">
+                                        Regular check-ins to celebrate milestones and adjust your plan as needed.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Regular check-ins to celebrate milestones and adjust your plan as needed.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Whole-Person Wellness</h5>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Whole-Person Wellness</h5>
+                                    <p class="text-white mb-0">
+                                        Guidance on stress management, nutrition, and physical activity to support your journey.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Guidance on stress management, nutrition, and physical activity to support your journey.
-                            </p>
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+    <!-- Features End -->
+
+    <!-- Main Service Tile Start -->
+    <div class="container-fluid pt-6 pb-6 bg-grey">
+        <div class="container">
+            <div class="text-center mx-auto wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
+                <h1>Why It Matters</h1>
+                <p class="fs-5 mb-4">
+                    Quitting smoking reduces your risk of heart disease, cancer, stroke and respiratory illness. 
+                    But more than that - it gives you back control, energy, and peace of mind. You don't have 
+                    to do it alone.
+                </p>
+                
             </div>
         </div>
     </div>
@@ -258,6 +282,7 @@
                                     <p class="text-white mb-0">Preferred Cessation Methods.</p>
                                 </div>
                             </div>
+                            <a class="btn btn-primary" href="https://form.jotform.com/252531501064546" target="_blank">Schedule A Session</a>
                         </div>
                     </div>
                 </div>
@@ -265,22 +290,6 @@
         </div>
     </div>
     <!-- What We Screen For End -->
-
-    <!-- Main Service Tile Start -->
-    <div class="container-fluid pt-6 pb-6 bg-grey">
-        <div class="container">
-            <div class="text-center mx-auto wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
-                <h1>Why It Matters</h1>
-                <p class="fs-5 mb-4">
-                    Quitting smoking reduces your risk of heart disease, cancer, stroke and respiratory illness. 
-                    But more than that - it gives you back control, energy, and peace of mind. You don't have 
-                    to do it alone.
-                </p>
-                <a class="btn btn-primary" href="https://form.jotform.com/252531501064546" target="_blank">Schedule A Session</a>
-            </div>
-        </div>
-    </div>
-    <!-- Main Service Tile End -->
 
 
      <!-- Footer Start -->
