--- a/services/substance-use.html
+++ b/services/substance-use.html
@@ -157,74 +157,96 @@
                     <b>Integration with primary care, mental health counseling and wellness resources.</b>
                 </p>
             </div>
-            <div class="row g-5 align-items-center">
-                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
-                    <img class="img-fluid" src="../img/services/substance-abuse.png" alt="">
-                </div>
-                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
-                    <h1>Services Offered</h1>
-                    <div class="owl-carousel testimonial-carousel">
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Comprehensive Assessment & Screening</h5>
+        </div>
+    </div>
+    <!-- Main Service Tile End -->
+
+    <!-- Features Start -->
+    <div class="container-fluid feature bullet-window wow fadeIn" data-wow-delay="0.1s">
+        <div class="container">
+            <div class="row g-0 justify-content-center">
+                <div class="col-lg-12 pt-5 px-3">
+                    <div class="mt-5 text-center">
+                        <h1 class="display-6 text-white text-uppercase mb-4 wow fadeIn" data-wow-delay="0.3s">
+                            Services Offered
+                        </h1>
+                        <div class="row g-4 pt-2 mb-4">
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Comprehensive Assessment & Screening</h5>
+                                    <p class="text-white mb-0">
+                                        A detailed evaluation to understand your history, patterns and readiness for change.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                A detailed evaluation to understand your history, patterns and readiness for change.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Individual Counseling</h5>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Individual Counseling</h5>
+                                    <p class="text-white mb-0">
+                                        One-on-one sessions using motivational interviewing, cognitive behavioral therapy
+                                        and relapse prevention strategies.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                One-on-one sessions using motivational interviewing, cognitive behavioral therapy and relapse prevention strategies.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Group Therapy</h5>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Group Therapy</h5>
+                                    <p class="text-white mb-0">
+                                        Peer-support groups led by licensed clinicians to foster connection, accountability
+                                        and shared learning.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Peer-support groups led by licensed clinicians to foster connection, accountability and shared learning.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Medication-Assisted Treatment(MAT)</h5>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Medication-Assisted Treatment(MAT)</h5>
+                                    <p class="text-white mb-0">
+                                        Safe administration of FDA-approved medications alongside counseling to reduce
+                                        cravings
+                                        and withdrawal symptoms.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Safe administration of FDA-approved medications alongside counseling to reduce cravings 
-                                and withdrawal symptoms.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Family Support & Education</h5>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Family Support & Education</h5>
+                                    <p class="text-white mb-0">
+                                        Workshops and counseling for loved ones to strengthen communication, set boundaries
+                                        and
+                                        promote healing for the whole family.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Workshops and counseling for loved ones to strengthen communication, set boundaries and 
-                                promote healing for the whole family.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Aftercare & Relapse Prevention</h5>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Aftercare & Relapse Prevention</h5>
+                                    <p class="text-white mb-0">
+                                        Ongoing support plans, check-ins and community referrals to ensure sustainable
+                                        recovery.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Ongoing support plans, check-ins and community referrals to ensure sustainable recovery.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Telehealth Options</h5>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Telehealth Options</h5>
+                                    <p class="text-white mb-0">
+                                        Virtual appointments for assessment, counseling and medication management -
+                                        accessible from home or work.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Virtual appointments for assessment, counseling and medication management - accessible from home or work.
-                            </p>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <!-- Features End -->
+
+
+    <!-- Main Service Tile Start -->
+    <div class="container-fluid pt-6 pb-6 bg-grey">
+        <div class="container">
             <div class="text-center mx-auto py-5 wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
                 <h1 class="mb-4">Who We Serve</h1>
                 <p><i class="fa fa-check-square text-primary me-3"></i>
