--- a/services/telemedicine.html
+++ b/services/telemedicine.html
@@ -144,83 +144,49 @@
                     need from the comfort of home.
                 </p>
             </div>
-            <div class="row g-5 align-items-center">
-                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
-                    <img class="img-fluid" src="../img/services/telemedicine.jpg" alt="">
-                </div>
-                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
-                    <h1>What We Offer</h1>
-                    <div class="owl-carousel testimonial-carousel">
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Virtual Consultations</h5>
-                            </div>
-                            <p class="fs-5">
-                                For general health concerns, chronic condition management, medication refills and more.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Mental Health Support</h5>
-                            </div>
-                            <p class="fs-5">
-                                Confidential counseling and therapy sessions available via secure video.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Follow-Up Appointments</h5>
-                            </div>
-                            <p class="fs-5">
-                                Convenient check-ins after in-person visits to monitor progress and adjust care plans.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Health Screenings & Education</h5>
-                            </div>
-                            <p class="fs-5">
-                                Remote assessments and wellness guidance tailored to your needs.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
     <!-- Main Service Tile End -->
 
-    <!-- What We Screen For Start -->
+    <!-- Features Start -->
     <div class="container-fluid feature bullet-window wow fadeIn" data-wow-delay="0.1s">
         <div class="container">
             <div class="row g-0 justify-content-center">
-                <div class="col-lg-12 pt-5">
-                    <div class="mt-5">
+                <div class="col-lg-12 pt-5 px-3">
+                    <div class="mt-5 text-center">
                         <h1 class="display-6 text-white text-uppercase mb-4 wow fadeIn" data-wow-delay="0.3s">
-                            What We Screen For
+                            What We Offer
                         </h1>
                         <div class="row g-4 pt-2 mb-4">
-                            <div class="col-sm-3 wow fadeIn" data-wow-delay="0.4s">
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
                                 <div class="flex-column text-center border border-5 border-primary p-5">
-                                    <p class="text-white text-uppercase mb-0">
-                                        Easy Scheduling.
+                                    <h5>Virtual Consultations</h5>
+                                    <p class="text-white mb-0">
+                                        For general health concerns, chronic condition management, medication refills and more.
                                     </p>
                                 </div>
                             </div>
-                            <div class="col-sm-3 wow fadeIn" data-wow-delay="0.5s">
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
                                 <div class="flex-column text-center border border-5 border-primary p-5">
-                                    <p class="text-white text-uppercase mb-0">Secure & Private Platform.</p>
+                                    <h5>Mental Health Support</h5>
+                                    <p class="text-white mb-0">
+                                        Confidential counseling and therapy sessions available via secure video.
+                                    </p>
                                 </div>
                             </div>
-                            <div class="col-sm-3 wow fadeIn" data-wow-delay="0.4s">
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
                                 <div class="flex-column text-center border border-5 border-primary p-5">
-                                    <p class="text-white text-uppercase mb-0">Compassionate Care.</p>
+                                    <h5>Follow-Up Appointments</h5>
+                                    <p class="text-white mb-0">
+                                        Convenient check-ins after in-person visits to monitor progress and adjust care plans.
+                                    </p>
                                 </div>
                             </div>
-                            <div class="col-sm-3 wow fadeIn" data-wow-delay="0.4s">
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
                                 <div class="flex-column text-center border border-5 border-primary p-5">
-                                    <p class="text-white text-uppercase mb-0">
-                                        Flexible Access.
+                                    <h5>Health Screenings & Education</h5>
+                                    <p class="text-white mb-0">
+                                        Remote assessments and wellness guidance tailored to your needs.
                                     </p>
                                 </div>
                             </div>
@@ -230,7 +196,7 @@
             </div>
         </div>
     </div>
-    <!-- What We Screen For End -->
+    <!-- Features End -->
 
     <!-- Main Service Tile Start -->
     <div class="container-fluid pt-6 pb-6 bg-grey">
