--- a/services/travel-medicine.html
+++ b/services/travel-medicine.html
@@ -144,51 +144,82 @@
                     and travel plans.
                 </p>
             </div>
-            <div class="row g-5 align-items-center">
-                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
-                    <img class="img-fluid" src="../img/services/travel-medicine.png" alt="">
-                </div>
-                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
-                    <h1>What We Offer</h1>
-                    <div class="owl-carousel testimonial-carousel">
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Pre-Travel Consultations</h5>
+        </div>
+    </div>
+    <!-- Main Service Tile End -->
+
+    <!-- Features Start -->
+    <div class="container-fluid feature bullet-window wow fadeIn" data-wow-delay="0.1s">
+        <div class="container">
+            <div class="row g-0 justify-content-center">
+                <div class="col-lg-12 pt-5 px-3">
+                    <div class="mt-5 text-center">
+                        <h1 class="display-6 text-white text-uppercase mb-4 wow fadeIn" data-wow-delay="0.3s">
+                            What We Offer
+                        </h1>
+                        <div class="row g-4 pt-2 mb-4">
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Pre-Travel Consultations</h5>
+                                    <p class="text-white mb-0">
+                                        Personalized risk assessments and advice based on your itinerary,
+                                        health status and planned activities.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Personalized risk assessments and advice based on your itinerary, 
-                                health status and planned activities.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Vaccinations and Preventive Care</h5>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Vaccinations and Preventive Care</h5>
+                                    <p class="text-white mb-0">
+                                        Includes Yellow Fever, Typhoid, Hepatitis A & B, MMR and
+                                        other region-specific immunizations.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Includes Yellow Fever, Typhoid, Hepatitis A & B, MMR and 
-                                other region-specific immunizations.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Travel Medications</h5>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Travel Medications</h5>
+                                    <p class="text-white mb-0">
+                                        Prescriptions for malaria prevention, altitude sickness, motion sickness,
+                                        traveler's diarrhea and more.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Prescriptions for malaria prevention, altitude sickness, motion sickness, 
-                                traveler's diarrhea and more.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Post-Travel Checkups</h5>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Post-Travel Checkups</h5>
+                                    <p class="text-white mb-0">
+                                        If you return with health concerns - including fever,
+                                        gastrointestinal issues or fatigue - we're here to help.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                If you return with health concerns - including fever, 
-                                gastrointestinal issues or fatigue - we're here to help.
-                            </p>
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+    <!-- Features End -->
+
+    <!-- Main Service Tile Start -->
+    <div class="container-fluid pt-6 pb-6 bg-grey">
+        <div class="container">
+            <div class="text-center mx-auto wow fadeInUp pt-5 row" data-wow-delay="0.5s" style="max-width: 600px;">
+                <h1>What Sets Us Apart:</h1>
+                <div class="text-start pb-5">
+                    <p><i class="fa fa-check-square text-primary me-3"></i><b>
+                            Fast Appointments and flexible scheduling.</b>
+                    </p>
+                    <p><i class="fa fa-check-square text-primary me-3"></i><b>Expert Guidance from caring medical providers.</b>
+                    </p>
+                    <p><i class="fa fa-check-square text-primary me-3"></i><b>Certified Yellow Fever Site (if applicable).</b>
+                    </p>
+                    <p><i class="fa fa-check-square text-primary me-3"></i><b>
+                        Comprehensive Service: travel, wellness and routine care - all in one place.
+                    </b></p>
+                </div>
+                <a class="btn btn-primary" href="https://form.jotform.com/252531501064546" target="_blank">Book Now</a>
             </div>
         </div>
     </div>
@@ -242,29 +273,6 @@
         </div>
     </div>
     <!-- Who Should Visit End -->
-
-    <!-- Main Service Tile Start -->
-    <div class="container-fluid pt-6 pb-6 bg-grey">
-        <div class="container">
-            <div class="text-center mx-auto wow fadeInUp pt-5 row" data-wow-delay="0.5s" style="max-width: 600px;">
-                <h1>What Sets Us Apart:</h1>
-                <div class="text-start pb-5">
-                    <p><i class="fa fa-check-square text-primary me-3"></i><b>
-                            Fast Appointments and flexible scheduling.</b>
-                    </p>
-                    <p><i class="fa fa-check-square text-primary me-3"></i><b>Expert Guidance from caring medical providers.</b>
-                    </p>
-                    <p><i class="fa fa-check-square text-primary me-3"></i><b>Certified Yellow Fever Site (if applicable).</b>
-                    </p>
-                    <p><i class="fa fa-check-square text-primary me-3"></i><b>
-                        Comprehensive Service: travel, wellness and routine care - all in one place.
-                    </b></p>
-                </div>
-                <a class="btn btn-primary" href="https://form.jotform.com/252531501064546" target="_blank">Book Now</a>
-            </div>
-        </div>
-    </div>
-    <!-- Main Service Tile End -->
 
 
      <!-- Footer Start -->
