--- a/services/womens-and-mens-health.html
+++ b/services/womens-and-mens-health.html
@@ -154,7 +154,7 @@
             <div class="row g-0 justify-content-center">
                 <div class="col-lg-6 pt-5 px-3">
                     <div class="mt-5 text-center">
-                        <h1 class="display-6 text-white text-uppercase mb-4 wow fadeIn" data-wow-delay="0.3s">
+                        <h1 class="display-6 text-white mb-4 wow fadeIn" data-wow-delay="0.3s">
                             Women's Health Services
                         </h1>
                         <div class="row g-4 pt-2 mb-4">
