--- a/index.html
+++ b/index.html
@@ -179,11 +179,12 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <h1 class="display-6 text-uppercase mb-4">About Firm Foundation LLC</h1>
                     <p class="mb-4">
-                        Firm Foundation LLC, established in 2024 by Dr. Agyenim Amoako and Patience Agbeviadey, is a leading provider of
-                        comprehensive medical and mental health services in Kent County, Delaware. Our mission is to deliver exceptional,
-                        holistic care in a centralized location, facilitating seamless coordination and continuity of patient care. Our
-                        approach is rooted in personalized care plans designed to meet the unique needs of each patient, fostering overall
-                        well-being and achieving optimal health outcomes.
+                        Firm Foundation Health and Wellness Center, established in 2024 by Dr. Agyenim Amoako and Patience
+                        Agbeviadey, aspires to offer comprehensive medical and mental health services in Kent County,
+                        Delaware. Their mission is to provide exceptional, holistic care in a centralized location, ensuring
+                        seamless coordination and continuity of patient care. The clinic's approach revolves around
+                        personalized care plans designed to cater to the unique needs of each patient, fostering overall
+                        well-being and facilitating optimal health outcomes.
                     </p>
                     <div class="row g-5 mb-4">
                         <div class="col-sm-6">
@@ -207,18 +208,19 @@
                         <div class="col-4 border border-2 border-primary">
                             <h5 class="text-primary py-3">Mission</h5>
                             <span class="">
-                                Our mission is to Provide and empower individuals with cost-effective, 
+                                Our mission is to Provide and empower individuals with cost-effective,
                                 high-quality medical and mental health services.
                             </span>
                         </div>
                         <div class="col-4 border border-2 border-primary">
                             <h5 class="text-primary py-3">Vision</h5>
-                            <span class="">Our vision is to serve patients of all ages, addressing their spiritual, physical, and emotional well-being 
+                            <span class="">Our vision is to serve patients of all ages, addressing their spiritual,
+                                physical, and emotional well-being
                                 through a comprehensive lifestyle approach to health.</span>
                         </div>
                         <div class="col-4 border border-2 border-primary">
                             <h5 class="text-primary py-3">Approach</h5>
-                            <span class="">Our holistic approach addresses interconnected health facets, 
+                            <span class="">Our holistic approach addresses interconnected health facets,
                                 resulting in more effective and enduring outcomes.</span>
                         </div>
                     </div>
