--- a/services/pap-smear.html
+++ b/services/pap-smear.html
@@ -151,40 +151,56 @@
                     problems early, when they are most treatable.
                 </p>
             </div>
-            <div class="row g-5 align-items-center">
-                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
-                    <img class="img-fluid" src="../img/services/pap-smear.png" alt="">
-                </div>
-                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
-                    <h1>What to Expect</h1>
-                    <div class="owl-carousel testimonial-carousel">
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Private, Comfortable Environment</h5>
+        </div>
+    </div>
+    <!-- Main Service Tile End -->
+
+    <!-- Features Start -->
+    <div class="container-fluid feature bullet-window wow fadeIn" data-wow-delay="0.1s">
+        <div class="container">
+            <div class="row g-0 justify-content-center">
+                <div class="col-lg-12 pt-5 px-3">
+                    <div class="mt-5 text-center">
+                        <h1 class="display-6 text-white text-uppercase mb-4 wow fadeIn" data-wow-delay="0.3s">
+                            What to Expect
+                        </h1>
+                        <div class="row g-4 pt-2 mb-4">
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Private, Comfortable Environment</h5>
+                                    <p class="text-white mb-0">
+                                        Our team prioritizes dignity and discretion during every exam.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Our team prioritizes dignity and discretion during every exam.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Gentle, Professional Care</h5>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Gentle, Professional Care</h5>
+                                    <p class="text-white mb-0">
+                                        Performed by experienced providers who explain each step and answer questions.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Performed by experienced providers who explain each step and answer questions.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Results & Follow-Up</h5>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h5>Results & Follow-Up</h5>
+                                    <p class="text-white mb-0">
+                                        Timely communication of results and guidance on next steps if needed.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="fs-5">
-                                Timely communication of results and guidance on next steps if needed.
-                            </p>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <!-- Features End -->
+
+
+    <!-- Main Service Tile Start -->
+    <div class="container-fluid pt-6 pb-6 bg-grey">
+        <div class="container">
             <div class="text-center mx-auto wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
                 <h1>Why It Matters</h1>
                 <p class="fs-5 mb-4">
